<resources>
    <!-- App texts -->
    <string name="app_name">CSTE QUIZ 3.2</string>
    <string name="start_button">Start Game</string>
    <string name="other_games_button">Other Games</string>

    <string name="return_button">Return</string>
    <string name="restart_button">Restart</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">LightQuiz</string>
    <string name="title_activity_play_game">LightQuiz</string>
    <string name="title_activity_game_result">Result</string>
    <string name="new_highscore">Congratulations\nNew High Score!!!</string>
    <string name="genre_selection">Select Quiz Genre to play</string>
    <string name="dialog_title">Quiz Selection</string>


    <!-- Other Strings -->
    <string name="data_name">PlayerData</string>
    <!-- <string name="hello_world">Hello world!</string>
     <string name="title_activity_game_result">Result</string>-->


    <!--String to override in game -->
    <string name="question">This is supposed to be an interesting question</string>
    <string name="answer_1">First Answer</string>
    <string name="answer_2">Second Answer</string>
    <string name="answer_3">Third Answer</string>
    <string name="answer_4">Fourth Answer</string>
    <string name="score">Score</string>
    <string name="highscore">High Score</string>
    <string name="life">Life</string>
    <string name="title_activity_game_over">GameOver</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
