<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#3F51B5"
    tools:context="com.sifatsdroid.quizapp.PlayGame">

    <!--<ImageView-->
        <!--android:id="@+id/question_image"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/question"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:adjustViewBounds="true"-->
        <!--android:maxHeight="150dp"-->
        <!--android:maxWidth="150dp"-->
        <!--android:visibility="invisible" />-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:baselineAligned="false"
        android:minWidth="100dp"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/answer_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="answerClicked"
            android:background="@drawable/blue_button"
            android:textColor="#fff"
            android:text="@string/answer_1" />

        <Button
            android:id="@+id/answer_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="answerClicked"
            android:background="@drawable/blue_button"
            android:textColor="#fff"
            android:text="@string/answer_2" />

        <Button
            android:id="@+id/answer_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="answerClicked"
            android:background="@drawable/blue_button"
            android:textColor="#fff"
            android:text="@string/answer_3" />

        <Button
            android:id="@+id/answer_4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button"
            android:textColor="#fff"
            android:layout_gravity="center_horizontal"
            android:onClick="answerClicked"
            android:text="@string/answer_4" />

    </LinearLayout>

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/space"
        android:textColor="#fff"
        android:textSize="20sp"
        android:text="@string/question"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/points_text" />

    <ImageView
        android:id="@+id/correct_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/correct_answer"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/wrong_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/wrong_answer"
        android:visibility="invisible" />




    <TextView
        android:id="@+id/points_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#CCCC00"
        android:textSize="30sp" />

    <!--<TextView-->
        <!--android:id="@+id/life_text"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:text="@string/life"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:textColor="#ee2222"-->
        <!--android:textSize="30sp" />-->

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="N"
        android:textColor="#fff"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="48sp"
        android:layout_above="@+id/nxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/sound_button"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/sound_icon"
        android:onClick="soundClick"
        android:visibility="invisible" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Next"
        android:id="@+id/nxt"
        android:onClick="answerClicked"
        android:background="@drawable/blue_button"
        android:textColor="#fff"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/sound_button"
        android:layout_toEndOf="@+id/sound_button" />

    <!--<Button-->
        <!--style="?android:attr/buttonStyleSmall"-->
        <!--android:layout_width="120dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Previous"-->
        <!--android:id="@+id/prev"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:onClick="answerClicked"-->
        <!--android:layout_toLeftOf="@+id/sound_button"-->
        <!--android:layout_toStartOf="@+id/sound_button" />-->

    <!--<FrameLayout-->
        <!--android:id="@+id/foreground"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:background="@android:color/white"-->
        <!--android:visibility="invisible">-->

    <!--<Space-->
            <!--android:layout_width="6dp"-->
            <!--android:layout_height="6dp" />-->

        <!--<Button-->
            <!--style="?android:attr/buttonStyleSmall"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background=""-->
            <!--android:text="Previous"-->
            <!--android:id="@+id/button"-->
            <!--android:textColor="#000"-->
            <!--android:layout_gravity="left|center_vertical" />-->

        <!--<Button-->
            <!--style="?android:attr/buttonStyleSmall"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="New Button"-->
            <!--android:id="@+id/button2"-->
            <!--android:layout_gravity="right|center_vertical" />-->
    <!--</FrameLayout>-->

</RelativeLayout>

